# fieldbridge

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: manifest.json
data/field_pack_evidence/: biological_intelligence.json  collective_intelligence.json  material_intelligence.json
data/field_packs/: biological_intelligence.json  collective_intelligence.json  material_intelligence.json
data/index/: core_examples.json
data/shards/: records_000.json  records_001.json  records_002.json  records_003.json  records_004.json  records_005.json  records_006.json
docs/: DATA_MODEL.md  ROADMAP.md
examples/: bioelectric_regeneration.txt  collective_trace.txt  material_memory.tex
fieldbridge/: __init__.py  cli.py  database.py  extract.py  models.py  render.py  routes.py  search.py
tests/: test_fieldbridge.py
